Bug 737754: Change guaranteed-to-succeed IndexOf() checks to Contains() checks in assertions within nsScriptLoader::PrepareLoadedRequest. r=hsivonen